--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,5 @@ RewriteEngine on
 RewriteRule ^$ public/ [L]
 RewriteRule (.*) public/$1 [L]
 </IfModule>
+
+ErrorDocument 404 http://localhost:8080/foro-ddr/index.php?url=PNFController/display
