--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,8 +1,7 @@
 <IfModule mod_rewrite.c>
-Options -Multiviews
-RewriteEngine on
-RewriteBase /foro-ddr/public
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.+)& index.php?url=$1 [QSA,L]
+Options +FollowSymLinks 
+RewriteEngine On 
+RewriteCond %{REQUEST_FILENAME} !-d 
+RewriteCond %{REQUEST_FILENAME} !-f 
+RewriteRule ^ index.php [L] 
 </IfModule>
